--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -8,6 +8,10 @@
         
         width: 1000px;
     }
+    .wrap.spaced {
+    	min-height: 210px;
+    	padding: 80px 0 60px;
+    }
     .wrap > * {
         max-width: 960px;
     }
