--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -319,6 +319,10 @@ section.features {
         font-size: 15px;
         line-height: 28px;
     }
+    
+p + h2, p + h1 {
+    margin-top: 1em;
+}
         
 @-webkit-keyframes slide {
     0% { bottom: -300px; opacity: 0; }
