--- a/public/assets/css/small.css
+++ b/public/assets/css/small.css
@@ -3,6 +3,7 @@
 }
 
 .wrap, #content {
+    position: static;
 	width: 90% !important;
 }
 
@@ -10,3 +11,33 @@
 	float: none;
 	width: 100% !important;
 }
+
+.download {
+    display: none;
+}
+
+#top {
+    padding: 30px 0 0;
+}
+    #top h1 {
+        margin-left: 0;
+    }
+        .home #top h1 {
+            padding-top: 0;
+        }
+    #top nav img, #top nav li {
+        padding-right: 40px;
+    }
+
+#footer small, #footer nav {
+    display: block;
+    float: none;
+    text-align: center;
+}
+    #footer small {
+        padding-bottom: 8px;
+    }
+    #footer a {
+        float: none;
+        margin: 0 20px;
+    }
