--- a/system/error/html/styles.css
+++ b/system/error/html/styles.css
@@ -3,10 +3,6 @@ body{
 	margin: 2em;
 }
 
-.rows {
-	overflow: hidden;
-}
-
 .exception, .trace, .context {
 	border-radius: 3px;
 	overflow: hidden;
@@ -24,26 +20,13 @@ body{
 		font-size: 16px;
 	}
 
-.trace {
-	background: #F5F5F5;
-	color: #412227;
-	width: 28%;
-	float: left;
-}
-
-	.trace pre {
-		border-bottom: 2px solid #E0E0FF;
-		padding: 8px 1em;
-		margin: 0;
-	}
-
-	.trace pre:last-child {
-		border-bottom: none;
+	.exception .info {
+		color: #ddd;
 	}
 
 .context {
-	width: 70%;
-	float: right;
+	margin-bottom: 1em;
+	border-radius: 3px;
 }
 
 	.context .snippet {
@@ -86,4 +69,8 @@ body{
 		background: #F5F5F5;
 		color: #2a2a2a;
 		font-size: 14px;
+	}
+
+	.context.trigger .source {
+		background: #ccc;
 	}
